# bci-blue-share

./: Cargo.toml  package-lock.json  package.json  tsconfig.json  wrangler.toml
.github/workflows/: cargo.yml  deploy.yml  typecheck.yml
core/: Cargo.toml
core/src/: app.rs  lib.rs  types.rs  ui.rs
osc/: Cargo.toml
osc/src/: api.rs  app.rs  main.rs  trit.rs  ui.rs
public/: bci-web-8af623c9f2d03625.js  bci-web-8af623c9f2d03625_bg.wasm  index.html  policy.html  scope.html  tileable-gof.wasm  tui.html
src/: api.ts  index.ts
tui/: Cargo.toml
tui/src/: main.rs
web/: Cargo.toml  Trunk.toml  index.html
web/src/: main.rs
