[package]
name = "osc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "bci.red/blue oscilloscope: vote on unbought items from bci.horse"

[[bin]]
name = "osc"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
