[package]
name = "bci-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bci"
path = "src/main.rs"

[dependencies]
bci-core = { path = "../core" }
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
serde_json = "1"
color-eyre = "0.6"
